# treams

./: .buildinfo  .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  Makefile  README.md  about.html  class_index.html  conftest.py  d_4f9324b2e0a22e28___init___py.html  d_4f9324b2e0a22e28__bessel_pyx.html  d_4f9324b2e0a22e28__coord_pyx.html  d_4f9324b2e0a22e28__gufuncs_pyx.html  d_4f9324b2e0a22e28__integrals_pyx.html  d_4f9324b2e0a22e28__misc_pxd.html  d_4f9324b2e0a22e28__misc_pyx.html  d_4f9324b2e0a22e28__ufuncs_pyx.html  d_4f9324b2e0a22e28__waves_pyx.html  d_4f9324b2e0a22e28__wigner3j_pyx.html  d_4f9324b2e0a22e28__wignerd_pyx.html  d_4f9324b2e0a22e28_cython_special_pyx.html  d_7447aff072d6b455___init___py.html  d_7447aff072d6b455__bessel_pyx.html  d_7447aff072d6b455__coord_pyx.html  d_7447aff072d6b455__gufuncs_pyx.html  d_7447aff072d6b455__integrals_pyx.html  d_7447aff072d6b455__misc_pxd.html  d_7447aff072d6b455__misc_pyx.html  d_7447aff072d6b455__ufuncs_pyx.html  d_7447aff072d6b455__waves_pyx.html  d_7447aff072d6b455__wigner3j_pyx.html  d_7447aff072d6b455__wignerd_pyx.html  d_7447aff072d6b455_cython_special_pyx.html  d_778754b73d2a93b2___init___py.html  d_778754b73d2a93b2__core_py.html  d_778754b73d2a93b2__lattice_py.html  d_778754b73d2a93b2__material_py.html  (+123 more)
.doctrees/: about.doctree  dev.doctree  examples.doctree  gettingstarted.doctree  index.doctree  intro.doctree  maxwell.doctree  operators.doctree  params.doctree  physicsarray.doctree  polarizations.doctree  ptsa.coeffs.doctree  ptsa.config.doctree  ptsa.cw.doctree  ptsa.doctree  ptsa.io.doctree  ptsa.lattice.cython_lattice.doctree  ptsa.lattice.doctree  ptsa.misc.doctree  ptsa.pw.doctree  ptsa.special.cython_special.doctree  ptsa.special.doctree  ptsa.sw.doctree  smatrix.doctree  theory.doctree  tmatrix.doctree  tmatrixc.doctree  treams..coeffs.doctree  treams..config.doctree  treams..cw.doctree  treams..doctree  treams..io.doctree  treams..misc.doctree  treams..pw.doctree  treams..sw.doctree  treams.coeffs.doctree  treams.config.doctree  treams.cw.doctree  treams.doctree  treams.io.doctree  (+3 more)
.doctrees/examples/: physicsarray.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml  docs.yml  doctests.yml  tests.yml
_downloads/324821477b4dad4667ed6c66c6c6b252/: cylinder_tmatrixc.py
_downloads/5236e293f35f25d568f5be377e7e739b/: chain_tmatrixc.py
_downloads/7ca758564fb7ccbe3d01c1c8e2ba2182/: cylindercluster.py
_downloads/9c856a1b2c00decdfeed2136112981c3/: cluster_tmatrixc.py
_downloads/a02ea8c2ba18258fe811e93c331ca534/: chain.py
_downloads/acdce4ee8fd3701bf7ca9ae68d6672e1/: cluster.py
_downloads/f71a90d80aa80eed4c2b9ec5e856bbba/: grid.py
_downloads/fefd0f046d30f3ab9ebfebbdca9ebe99/: array_spheres_tmatrixc.py
_sources/: about.rst.txt  dev.rst.txt  examples.rst.txt  gettingstarted.rst.txt  index.rst.txt  maxwell.rst.txt  polarizations.rst.txt  ptsa.cw.rst.txt  ptsa.lattice.cython_lattice.rst.txt  ptsa.misc.rst.txt  ptsa.pw.rst.txt  ptsa.rst.txt  ptsa.special.cython_special.rst.txt  ptsa.sw.rst.txt  theory.rst.txt  treams..io.rst.txt  treams..misc.rst.txt  treams..rst.txt  treams.coeffs.rst.txt  treams.rst.txt  treams.sw.rst.txt
_sources/examples/: physicsarray.rst.txt
_static/: documentation_options.js  no-nobiles.css
docs/: _config.yml  _toc.yml  about.rst  conf.py  dev.rst  examples.rst  gettingstarted.rst  index.rst  intro.rst  maxwell.rst  notebooks.rst  operators.rst  params.rst  physicsarray.rst  polarizations.rst  ptsa.coeffs.rst  ptsa.config.rst  ptsa.io.rst  ptsa.lattice.rst  ptsa.misc.rst  ptsa.rst  ptsa.special.rst  smatrix.rst  theory.rst  tmatrix.rst  tmatrixc.rst  treams..pw.rst  treams.config.rst  treams.cw.rst  treams.rst
docs/_static/: custom.css
docs/examples/: array_spheres.py  band_structure.py  chain.py  chain_tmatrixc.py  cluster.py  cluster_tmatrixc.py  crystal.py  crystal_mv.py  cylinder_tmatrixc.py  cylindercluster.py  grating_tmatrixc.py  grid.py  physicsarray.rst  slab.py  sphere.py
docs/notebooks/: array_spheres.md  array_spheres_tmatrixc.md  band_structure.md  chain.md  chain_tmatrixc.md  cluster.md  cluster_tmatrixc.md  crystal.md  crystal_tmatrixc.md  cylinder_tmatrixc.md  grating_tmatrixc.md  grid.md  slab.md  sphere.md
docs/sphinx_extensions/: numpy_printoptions.py  signature_override.py
examples/: cluster.py  physicsarray.html
plot_directive/examples/: chain.py  cluster.py  (+7 more)
ptsa/: __init__.py  _basisset.py  _clscluster.py  _core.py  _lattice.py  _material.py  _operators.py  _qmatrix.py  _smatrix.py  _tmatrix.py  _tmatrix_base.py  _tmatrixc.py  coeffs.pxd  coeffs.pyx  config.pyx  cw.pyx  ebcm.py  field.py  io.py  misc.py  pw.pyx  sw.pyx  util.py
treams/: __init__.py  _core.py  _lattice.py  _material.py  _operators.py  _smatrix.py  _tmatrix.py  coeffs.pyx  config.pyx  cw.pyx  ebcm.py  io.py  misc.py  pw.pyx  sw.pyx  util.py
(+105 files in other folders)
