[build-system]
requires = [
    "setuptools", #<66 for windows to avoid problems where CC is not defined
    "wheel",
    "Cython",
    "numpy<2.0",
    "scipy>=1.6",
    "setuptools_scm>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.setuptools_scm]

[tool.pylint.messages_control]
extension-pkg-whitelist = "treams"

[tool.cibuildwheel]
archs = ["auto64"]
skip = ["pp*", "*musllinux*"]
test-command = "python -m pytest {project}/tests/unit || :"
test-extras = ["test", "io"]
