[metadata]
name = ptsa
author = Dominik Beutel
author_email = dominik.beutel@kit.edu
url = https://git.scc.kit.edu/photonics/ptsa
description = "Periodic T-matrix scattering algorithms"
long_description = file: README.md
long_description_content_type = text/markdown
platform = Linux, Windows
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Cython
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >= 3.7
packages =
    ptsa
    ptsa.special
    ptsa.lattice

install_requires =
    numpy
    scipy >= 1.6

[options.extras_require]
test =
    pytest
    pytest-cov
docs =
    sphinx

[sdist]
formats = zip, gztar

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
filename = *.py,*.pyx,*.pxd
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501
per-file-ignores =
    *.pyx:E211,E225,E227
    *.pxd:E211,E225,E227
