[metadata]
name = treams
author = Dominik Beutel
author_email = dominik.beutel@kit.edu
url = https://git.scc.kit.edu/tfp-photonics/treams
description = "T-matrix scattering code for nanophotonic compoutations"
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
platform = Linux, Windows
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Cython
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >= 3.7
packages =
    treams
    treams.special
    treams.lattice

install_requires =
    numpy
    scipy >= 1.6

[options.extras_require]
test =
    Cython
    pytest
    pytest-cov
docs =
    sphinx
    matplotlib
io =
    h5py

[sdist]
formats = zip, gztar

[pydocstyle]
inherit = false
convention = google

[flake8]
filename = *.py,*.pyx,*.pxd
max-line-length = 88
extend-ignore = E203, E501
per-file-ignores =
    *.pyx:E211,E225,E227
    *.pxd:E211,E225,E227
